# stock-repo-brushup-automation

./: CODEX.md  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
docs/: architecture.md  implementation-status.md  library-research.md  setup.md  workflow-permission-recovery.md
docs/workflows/: ci.yml  scan-and-brushup.yml
scripts/: check_project.py
stock_repo_brushup/: __init__.py  cli.py  detector.py  github_client.py  library_catalog.py  models.py  recommendations.py  report.py  sample_data.py
tests/: test_detector.py  test_github_client.py  test_recommendations.py  test_report.py
