[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-repo-brushup"
version = "0.1.0"
description = "Discover stock-investment related repos, recommend finance OSS libraries, and create safe brush-up PRs."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "GitHub-GPT Developer"}]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6.0"
]

[project.scripts]
stock-brushup = "stock_repo_brushup.cli:main"

[tool.setuptools.packages.find]
include = ["stock_repo_brushup*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []
